# benefind

./: .env.example  .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.review-pdf.config.mjs
config/: municipalities.toml  municipality_coordinates.toml  prompts.toml  review_pdf.toml  review_pdf_template.html  settings.toml  url_scoring.toml
config/prompts/: classify.q01_target_focus.toml  classify.q02_regional_focus.toml  classify.q03_donation_ask.toml  classify.q04_primary_target_group.toml  classify.q05_founded_year.toml  classify.q06_financials_manual.toml  classify.q07_org_summary_de.toml  discover.mismatch_verify.toml  discover.website_verify.toml
data/classify/: registry_lock.json
data/classify/q01_target_focus/: ask_log.jsonl
data/filtered/: .gitkeep
data/meta/: filter_funnel_meta_2026.json  filter_funnel_snakey_2026_dark.html  filter_funnel_snakey_2026_light.html  filter_funnel_snakey_comments_2026.json  filter_funnel_snakey_comments_example.json  filter_funnel_snakey_config_2026_base.toml  filter_funnel_snakey_config_2026_dark.toml  filter_funnel_snakey_config_2026_light.toml  filter_funnel_snakey_config_example.toml
data/orgs/: .gitkeep
data/parsed/: .gitkeep
data/raw/: .gitkeep
data/reports/: .gitkeep
docs/: configuration.md  local-development.md  pipeline-usage.md  plan.md  principles.md  project-structure.md  url-scoring-method.md  visualization.md
preview/review-pdf/: index.html  main.js
scripts/: build_filter_funnel_meta.py  check_normalization.py  playwright_debug_open.py  render_filter_funnel_snakey.py  review_flagged.py  review_pdf_preview_context.py  run_pipeline.py
src/benefind/: __init__.py  classify.py  cli.py  cli_ui.py  config.py  csv_io.py  discover_websites.py  evaluate.py  exclusion_reasons.py  external_api.py  filter_locations.py  legal_forms.py  parse_pdf.py  prepare_scraping.py  report.py  review.py  review_pdf.py  scrape.py  scrape_clean.py  verify_discover.py  zefix.py
src/benefind/diagram/filter_funnel/: __init__.py  adapter.py
src/benefind/diagram/snakey/: __init__.py  layout.py  render_svg.py  text.py  types.py
tests/: test_cli_normalize_urls_report.py  test_csv_io.py  test_evaluate_org_id.py  test_external_api_failfast.py  test_prepare_scraping_scope.py  test_prompt_registry.py  test_report_org_id.py  test_review_scrape_quality.py  test_scrape_clean.py  test_scrape_extraction.py  test_scrape_manifest.py  test_snakey_diagram.py  test_snakey_engine_knobs.py
