[project]
name = "benefind"
version = "0.1.0"
description = "Precision-first nonprofit screening with explainable, reproducible decisions and selective LLM assistance"
license = "GPL-3.0-only"
requires-python = ">=3.12"
dependencies = [
    # PDF parsing
    "pdfplumber>=0.11",
    # HTTP
    "httpx>=0.27",
    # HTML to markdown
    "markdownify>=0.14",
    # Fuzzy string matching
    "thefuzz>=0.22",
    # OpenAI API
    "openai>=1.40",
    # Config
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    # CLI
    "typer>=0.12",
    "rich>=13.0",
    "questionary>=2.0",
    # Data handling
    "pandas>=2.2",
    # robots.txt parsing
    "robotexclusionrulesparser>=1.7",
    # HTML parsing
    "beautifulsoup4>=4.12",
    # Content extraction alternatives
    "trafilatura>=1.8",
    "readability-lxml>=0.8.1",
    # Browser rendering fallback
    "playwright>=1.52",
    # Environment variables
    "python-dotenv>=1.0",
    # Retry/backoff helpers
    "tenacity>=9.0",
    # Review PDF export
    "reportlab>=4.2",
    "qrcode>=8.0",
    "pillow>=10.0",
    "mapbox-vector-tile>=2.1",
    "jinja2>=3.1",
]

[project.scripts]
benefind = "benefind.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benefind"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
